syntax = "proto3";

package api.info.v1;

option go_package = "ucenter/api/info/v1;v1";
option java_multiple_files = true;
option java_package = "api.info.v1";

service Info {
    rpc GetInfo1 (GetInfoRequest) returns (GetInfoReply){
        option (google.api.http) = {
            get: "/ucenter/info/v1",
        };
    };
    rpc UpdateInfo (UpdateInfoRequest) returns (UpdateInfoReply){
        option (google.api.http) = {
            post: "/ucenter/info/v1",
            body: "*"
        };
    };
}

message UpdateInfoRequest {
    int64 id = 1;
}
message UpdateInfoReply {}

message GetInfoRequest {
    int64 id = 1;
}
message GetInfoReply {

}
